--- a/game-of-war/index.html
+++ b/game-of-war/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Game of War</title>
+    <script
+            src="https://code.jquery.com/jquery-3.2.1.js"
+            integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+            crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
